--- a/notedblog/templates/home.html
+++ b/notedblog/templates/home.html
@@ -1,1 +1,11 @@
-<h1>HELLO WORLD</h1>
+<h1>Post</h1>
+
+<ul>
+{% for post in object_list %}
+    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }} {{ post.author.last_name }}<br/>
+    {{ post.body }}</li>
+
+
+{% endfor %}
+</ul>
+
